Fix: Blurry Tooltips on Chrome 53

--- a/src/assets/scss/components/_global.scss
+++ b/src/assets/scss/components/_global.scss
@@ -38,3 +38,8 @@ $breakpoints: (
   lrg: 800px,
   xl: 1200px
 );
+
+// will-change: transform caused blurry tooltips on Chrome 53
+.mdl-tooltip {
+  will-change: initial;
+}
